# space_render

./: Cargo.toml  README.md  build.rs
config/: display.ron
examples/: cosmos.rs
shaders/spirv/: atmosphere.frag.spv  atmosphere.vert.spv  star.frag.spv  star.vert.spv  star_point.frag.spv  star_point.vert.spv
shaders/src/: atmosphere.frag.glsl  atmosphere.vert.glsl  star.frag.glsl  star.vert.glsl  star_point.frag.glsl  star_point.vert.glsl
src/: lib.rs  pass.rs
src/cosmos/: mod.rs  pass.rs
src/planet/: mod.rs  pass.rs  sub.rs
src/renderutils/: camera.rs  mod.rs  shader_buffer.rs  static_buffer.rs
src/star/: mod.rs  pass.rs  sub.rs
src/util/: camera.rs  mod.rs  shader_buffer.rs  static_buffer.rs  texture_set.rs
