[package]
name = "cosmos-render"
version = "0.1.0"
description="A compact render plugin to the Amethyst game engine which renders the 'cosmos' (so basically lots of tiny stars) in real time."
repository="https://github.com/Merlotec/comsmos-render.git"
authors = ["Brodie Knight <ncbmknight@gmail.com>"]
keywords=["cosmos", "stars", "amethyst", "renderer", "plugin"]
edition = "2018"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glsl-to-spirv = "0.1.7"

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]
default=["amethyst/vulkan"]

[dependencies]
amethyst="0.13.2"
rand = "0.7.2"
lazy_static = "1.4.0"
failure = "0.1.6"
glsl-layout = "0.3.2"